--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -36,19 +36,21 @@ jobs:
     - name: Build and push backend image
       uses: docker/build-push-action@v4
       with:
-        context: ./ipl-dashboard-backend
+        
+        context: ./backend
         push: true
         tags: ${{ secrets.DOCKERHUB_USERNAME }}/${{ env.BACKEND_IMAGE_NAME }}:latest
 
     - name: Build and push frontend image
       uses: docker/build-push-action@v4
       with:
-        context: ./ipl-dashboard-frontend
+        
+        context: ./frontend
         push: true
         tags: ${{ secrets.DOCKERHUB_USERNAME }}/${{ env.FRONTEND_IMAGE_NAME }}:latest
 
     - name: Update kubeconfig
-      run: aws eks update-kubeconfig --region ${{ env.AWS_REGION }} --name ${{ env.EKS-Saikrishna1 }}
+      run: aws eks update-kubeconfig --region ${{ env.AWS_REGION }} --name ${{ env.EKS_CLUSTER_NAME }}
 
     - name: Deploy to EKS
       run: |
