--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -1,9 +1,13 @@
+# frontend/Dockerfile
+
+
 FROM node:18-alpine AS builder
 
 WORKDIR /app
 
 COPY package*.json ./
-RUN npm install
+
+RUN npm install --legacy-peer-deps
 
 COPY . .
 
@@ -12,6 +16,8 @@ RUN npm run build
 FROM nginx:stable-alpine
 
 COPY --from=builder /app/build /usr/share/nginx/html
+
+COPY nginx.conf /etc/nginx/conf.d/default.conf
 
 EXPOSE 80
 
