--- a/frontend/nginx.conf
+++ b/frontend/nginx.conf
@@ -6,4 +6,9 @@ server {
     index  index.html index.htm;
     try_files $uri /index.html;
   }
+
+  
+  location /api/ {
+    proxy_pass http://backend-service:8080;
+  }
 }
