--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -1,8 +1,18 @@
+# backend/Dockerfile
+
 
 FROM node:18-alpine
+
 WORKDIR /app
+
 COPY package*.json ./
+
 RUN npm install
+
 COPY . .
-EXPOSE 5000
+
+RUN npm run build
+
+EXPOSE 8080
+
 CMD ["npm", "start"]
